[[bench]]
name = "spec_benchmarks"
harness = false

[package]
name = "vegafusion-rt-datafusion"
license = "BSD-3-Clause"
edition = "2021"
version = "1.0.2"

[features]
pyarrow = [ "vegafusion-core/pyarrow",]
protobuf-src = [ "vegafusion-core/protobuf-src",]

[dependencies]
regex = "^1.5.5"
lazy_static = "^1.4.0"
serde_json = "1.0.81"
chrono = "0.4.23"
chrono-tz = "0.8.1"
prost = "0.11.3"
prost-types = "0.11.2"
num-traits = "0.2.15"
itertools = "0.10.3"
float-cmp = "0.9.0"
lru = "0.7.5"
futures = "0.3.21"
async-trait = "0.1.53"
async-recursion = "0.3.2"
async-lock = "2.5.0"
tempfile = "3.3.0"
futures-util = "0.3.21"
bytes = "1.1.0"
deterministic-hash = "1.0.1"
log = "0.4.17"
env_logger = "0.9.0"
ordered-float = "3.4.0"
lock_api = "^0.4.8"
reqwest-retry = "0.2.1"
reqwest-middleware = "0.2.0"

[dev-dependencies]
futures = "0.3.21"
futures-util = "0.3.21"
rstest = "0.12.0"
test-case = "1.2.1"
base64 = "0.13.0"
dssim = "3.1.0"
rgb = "0.8.32"
lodepng = "3.6.1"

[dependencies.uuid]
version = "^1.2"
features = [ "v4",]

[dependencies.sqlgen]
git = "https://github.com/vegafusion/sqlgen-rs.git"
rev = "e5ac9609dfffbf98af1fd8f2bc8a07216451bb51"

[dependencies.sqlx]
version = "0.6.1"
features = [ "runtime-tokio-rustls", "sqlite", "macros",]

[dependencies.libsqlite3-sys]
version = "0.24.1"
features = [ "bundled",]

[dependencies.vegafusion-core]
path = "../vegafusion-core"
features = [ "sqlgen",]
version = "1.0.2"

[dependencies.serde]
version = "1.0.137"
features = [ "derive",]

[dependencies.datafusion]
version = "~16.1.0"
git = "https://github.com/jonmmease/arrow-datafusion.git"
rev = "1e6438de31219b284df9b83f25ca36ddb1184f22"

[dependencies.datafusion-expr]
version = "~16.1.0"
git = "https://github.com/jonmmease/arrow-datafusion.git"
rev = "1e6438de31219b284df9b83f25ca36ddb1184f22"

[dependencies.tokio]
version = "1.18.1"
features = [ "macros", "rt-multi-thread",]

[dependencies.reqwest]
version = "0.11.10"
default_features = false
features = [ "rustls-tls",]

[dev-dependencies.reqwest]
version = "0.11.10"
default_features = false
features = [ "blocking", "rustls-tls",]

[dev-dependencies.criterion]
version = "0.3.5"
features = [ "async_tokio",]
