[[bench]]
name = "spec_benchmarks"
harness = false

[package]
name = "vegafusion-runtime"
license = "BSD-3-Clause"
edition = "2021"
version = "1.6.9"
description = "VegaFusion Runtime"

[features]
py = ["vegafusion-core/py"]
protobuf-src = ["vegafusion-core/protobuf-src"]

[dependencies]
regex = "^1.5.5"
num-traits = "0.2.15"
itertools = "0.11.0"
float-cmp = "0.9.0"
lru = "0.11.1"
async-recursion = "1.0.5"
async-lock = "2.8.0"
tempfile = "3.3.0"
futures-util = "0.3.21"
bytes = "1.1.0"
deterministic-hash = "1.0.1"
log = "0.4.17"
env_logger = "0.10.0"
ordered-float = "3.6.0"
reqwest-retry = "0.3.0"
reqwest-middleware = "0.2.0"

[dev-dependencies]
futures-util = "0.3.21"
rstest = "0.18.2"
test-case = "3.1.0"
base64 = "0.21.0"
pixelmatch = "0.1.0"
rgb = "0.8.32"
lodepng = "3.6.1"

[dependencies.serde_json]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.lazy_static]
workspace = true

[dependencies.object_store]
workspace = true
features = ["aws"]

[dependencies.chrono]
workspace = true

[dependencies.chrono-tz]
workspace = true

[dependencies.prost]
workspace = true

[dependencies.prost-types]
workspace = true

[dependencies.uuid]
version = "^1.2"
features = ["v4"]

[dependencies.sqlparser]
workspace = true

[dependencies.vegafusion-common]
path = "../vegafusion-common"
features = ["json", "sqlparser", "prettyprint", "object_store"]
version = "1.6.9"

[dependencies.vegafusion-core]
path = "../vegafusion-core"
features = ["sqlparser"]
version = "1.6.9"

[dependencies.vegafusion-datafusion-udfs]
path = "../vegafusion-datafusion-udfs"
version = "1.6.9"

[dependencies.vegafusion-dataframe]
path = "../vegafusion-dataframe"
version = "1.6.9"

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.datafusion-common]
workspace = true

[dependencies.datafusion-expr]
workspace = true

[dependencies.datafusion-physical-expr]
workspace = true

[dependencies.datafusion-optimizer]
workspace = true

[dependencies.datafusion-functions]
workspace = true

[dependencies.datafusion-functions-aggregate]
workspace = true

[dependencies.datafusion-functions-nested]
workspace = true

[dependencies.datafusion-functions-window]
workspace = true

[dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread", "fs"]

[dependencies.reqwest]
workspace = true
default-features = false
features = ["rustls-tls"]

[dev-dependencies.reqwest]
workspace = true
default-features = false
features = ["blocking", "rustls-tls"]

[dev-dependencies.criterion]
version = "0.4.0"
features = ["async_tokio"]

[dev-dependencies.vegafusion-sql]
path = "../vegafusion-sql"
version = "1.6.9"
features = ["datafusion-conn"]
