[[bench]]
name = "spec_benchmarks"
harness = false

[package]
name = "vegafusion-runtime"
license = "BSD-3-Clause"
edition = "2021"
version = "2.0.2"
description = "VegaFusion Runtime"

[features]
default = [
  "fs",
  "multi-thread",
  "rustls-tls",
  "s3",
  "http",
  "parquet",
  "proto",
  "tonic",
]
py = ["vegafusion-core/py"]
proto = ["vegafusion-common/proto", "dep:datafusion-proto"]
tonic = ["dep:tonic", "vegafusion-core/tonic_support", "proto"]
protobuf-src = ["vegafusion-core/protobuf-src"]
s3 = ["object_store/aws"]
http = ["object_store/http"]
http-wasm = ["object-store-wasm/http"]
fs = ["tokio/fs"]
parquet = ["datafusion-common/parquet", "datafusion/parquet"]
multi-thread = ["tokio/rt-multi-thread"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
float-cmp = "0.10.0"
lru = "0.13.0"
async-recursion = "1.1.1"
async-lock = "2.8.0"
futures-util = "0.3.31"
async-mutex = "1.4.0"

[dev-dependencies]
futures-util = "0.3.31"
rstest = "0.24.0"
test-case = "3.3.1"
pixelmatch = "0.1.0"
rgb = "0.8.50"
lodepng = "3.10.7"

[dev-dependencies.base64]
workspace = true

[dependencies.url]
workspace = true

[dependencies.cfg-if]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.lazy_static]
workspace = true

[dependencies.object_store]
workspace = true

[dependencies.object-store-wasm]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.chrono-tz]
workspace = true

[dependencies.prost]
workspace = true

[dependencies.regex]
workspace = true

[dependencies.num-traits]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.tempfile]
workspace = true

[dependencies.bytes]
workspace = true

[dependencies.log]
workspace = true

[dependencies.env_logger]
workspace = true

[dependencies.ordered-float]
workspace = true

[dependencies.uuid]
workspace = true
features = ["v4"]

[dependencies.sqlparser]
workspace = true

[dependencies.vegafusion-common]
path = "../vegafusion-common"
features = ["json", "sqlparser", "prettyprint", "object_store", "url"]
version = "2.0.2"

[dependencies.vegafusion-core]
path = "../vegafusion-core"
features = ["sqlparser"]
version = "2.0.2"

[dependencies.serde]
workspace = true

[dependencies.datafusion]
workspace = true
default-features = false

[dependencies.datafusion-common]
workspace = true
default-features = false

[dependencies.datafusion-expr]
workspace = true

[dependencies.datafusion-physical-expr]
workspace = true

[dependencies.datafusion-optimizer]
workspace = true

[dependencies.datafusion-functions]
workspace = true

[dependencies.datafusion-functions-aggregate]
workspace = true

[dependencies.datafusion-functions-nested]
workspace = true

[dependencies.datafusion-functions-window]
workspace = true

[dependencies.datafusion-proto]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
features = ["macros"]

[dependencies.tonic]
workspace = true
optional = true

[dependencies.reqwest]
workspace = true
default-features = false
features = ["json"]

[dev-dependencies.reqwest]
workspace = true
default-features = false
features = ["blocking", "rustls-tls"]

[dev-dependencies.criterion]
version = "0.6.0"
features = ["async_tokio"]
