[[bin]]
name = "vegafusion-server"
path = "src/main.rs"

[package]
name = "vegafusion-server"
license = "BSD-3-Clause"
version = "1.6.9"
edition = "2021"
description = "VegaFusion Server"
repository = "https://github.com/vega/vegafusion"

[features]
protobuf-src = ["vegafusion-core/protobuf-src", "dep:protobuf-src"]

[dependencies]
futures-util = "0.3.21"
regex = "^1.5.5"
h2 = "0.3.16"

[dev-dependencies]
serde_json = "1.0.91"
assert_cmd = "2.0"
predicates = "3.0.2"

[build-dependencies]
tonic-build = {workspace = true}
prost-build = { workspace = true }

[dependencies.prost]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.vegafusion-common]
path = "../vegafusion-common"
version = "1.6.9"

[dependencies.vegafusion-core]
path = "../vegafusion-core"
features = ["tonic_support"]
version = "1.6.9"

[dependencies.vegafusion-runtime]
path = "../vegafusion-runtime"
version = "1.6.9"

[dependencies.tokio]
workspace = true
features = ["rt-multi-thread", "macros"]

[dependencies.datafusion]
workspace = true

[dependencies.tonic-web]
workspace = true

[dependencies.tonic]
workspace = true
features = ["tls"]

[dependencies.clap]
version = "4.2.1"
features = ["derive"]

[build-dependencies.protobuf-src]
version = "1.1.0"
optional = true
