[[bin]]
name = "vegafusion-server"
path = "src/main.rs"

[package]
name = "vegafusion-server"
license = "BSD-3-Clause"
version = "2.0.3"
edition = "2021"
description = "VegaFusion Server"
repository = "https://github.com/vega/vegafusion"

[features]
protobuf-src = ["vegafusion-core/protobuf-src", "dep:protobuf-src"]

[dependencies]
h2 = "0.3.26"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

[dependencies.regex]
workspace = true

[dependencies.prost]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.vegafusion-common]
path = "../vegafusion-common"
version = "2.0.3"

[dependencies.vegafusion-core]
path = "../vegafusion-core"
features = ["tonic_support"]
version = "2.0.3"

[dependencies.vegafusion-runtime]
path = "../vegafusion-runtime"
version = "2.0.3"

[dependencies.tokio]
workspace = true
features = ["rt-multi-thread", "macros", "time"]

[dependencies.datafusion]
workspace = true

[dependencies.tonic-web]
workspace = true

[dependencies.tonic]
workspace = true
features = ["tls"]

[dependencies.clap]
version = "4.5.23"
features = ["derive"]

[dev-dependencies.serde_json]
workspace = true

[build-dependencies.tonic-build]
workspace = true

[build-dependencies.prost-build]
workspace = true

[build-dependencies.protobuf-src]
version = "2.1.1"
optional = true
