[package]
name = "vegafusion-sql"
version = "1.0.3"
edition = "2021"

[features]
datafusion-conn = [ "datafusion", "tempfile", "reqwest", "reqwest-retry", "reqwest-middleware", "vegafusion-datafusion-udfs"]
sqlite-conn = ["sqlx", "sqlx/sqlite", "regex", "vegafusion-common/prettyprint", "libsqlite3-sys"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.53"
deterministic-hash = "1.0.1"
log = "0.4.17"

[dependencies.sqlparser]
version = "0.30.0"

[dependencies.vegafusion-common]
path = "../vegafusion-common"
version = "1.0.3"
features = ["sqlparser"]

[dependencies.vegafusion-dataframe]
path = "../vegafusion-dataframe"
version = "1.0.3"

[dependencies.vegafusion-datafusion-udfs]
path = "../vegafusion-datafusion-udfs"
version = "1.0.3"
optional = true

[dependencies.arrow]
version = "32.0.0"
default_features = false
features = ["ipc"]

[dependencies.datafusion-common]
version = "18.0.0"

[dependencies.datafusion-expr]
version = "18.0.0"

[dependencies.datafusion]
version = "18.0.0"
optional = true

[dependencies.tempfile]
version = "3.3.0"
optional = true

[dependencies.reqwest]
version = "0.11.14"
default-features = false
features = [ "rustls-tls",]
optional = true

[dependencies.reqwest-retry]
version = "0.2.1"
optional = true

[dependencies.reqwest-middleware]
version = "0.2.0"
optional = true

[dependencies.sqlx]
version = "0.6.1"
features = [ "runtime-tokio-rustls", "macros",]
optional = true

[dependencies.regex]
version = "^1.5.5"
optional = true

[dependencies.libsqlite3-sys]
version = "0.24.1"
features = [ "bundled",]
optional = true
