[package]
name = "vegafusion-sql"
license = "BSD-3-Clause"
version = "1.3.0-rc3"
edition = "2021"
description = "VegaFusion SQL dialect generation and connection implementations"

[features]
datafusion-conn = [ "datafusion", "tempfile", "reqwest", "reqwest-retry", "reqwest-middleware", "vegafusion-datafusion-udfs",]

[dependencies]
async-trait = "0.1.53"
deterministic-hash = "1.0.1"
log = "0.4.17"

[dev-dependencies]
rstest = "0.17.0"
rstest_reuse = "0.5.0"
lazy_static = "^1.4.0"
toml = "0.7.2"

[dependencies.sqlparser]
version = "0.33.0"

[dependencies.vegafusion-common]
path = "../vegafusion-common"
version = "1.3.0-rc3"
features = [ "sqlparser",]

[dependencies.vegafusion-dataframe]
path = "../vegafusion-dataframe"
version = "1.3.0-rc3"

[dependencies.vegafusion-datafusion-udfs]
path = "../vegafusion-datafusion-udfs"
version = "1.3.0-rc3"
optional = true

[dependencies.arrow]
version = "38.0.0"
default_features = false
features = [ "ipc",]

[dependencies.datafusion-common]
version = "24.0.0"

[dependencies.datafusion-expr]
version = "24.0.0"

[dependencies.datafusion]
version = "24.0.0"
optional = true

[dependencies.tempfile]
version = "3.3.0"
optional = true

[dependencies.reqwest]
version = "0.11.14"
default-features = false
features = [ "rustls-tls",]
optional = true

[dependencies.reqwest-retry]
version = "0.2.1"
optional = true

[dependencies.reqwest-middleware]
version = "0.2.0"
optional = true

[dependencies.regex]
version = "^1.5.5"
optional = true

[dev-dependencies.async-std]
version = "1.12.0"
features = [ "attributes",]

[dev-dependencies.serde_json]
version = "1.0.91"
features = [ "preserve_order",]

[dev-dependencies.vegafusion-datafusion-udfs]
path = "../vegafusion-datafusion-udfs"
version = "1.3.0-rc3"

[dev-dependencies.vegafusion-common]
path = "../vegafusion-common"
version = "1.3.0-rc3"
features = [ "sqlparser", "json", "prettyprint",]

[dev-dependencies.tokio]
version = "1.27.0"
features = [ "macros", "rt-multi-thread",]

[dev-dependencies.serde]
version = "1.0.137"
features = [ "derive",]
