[package]
name = "vegafusion-sql"
license = "BSD-3-Clause"
version = "1.6.9"
edition = "2021"
description = "VegaFusion SQL dialect generation and connection implementations"

[features]
datafusion-conn = [
  "datafusion",
  "tempfile",
  "reqwest",
  "reqwest-retry",
  "reqwest-middleware",
  "vegafusion-datafusion-udfs",
  "object_store",
  "url",
  "vegafusion-common/object_store",
  "vegafusion-common/prettyprint",
]
pyarrow = [
  "pyo3",
  "pyo3-arrow",
  "vegafusion-dataframe/pyarrow",
]

[dependencies]
async-trait = "0.1.73"
deterministic-hash = "1.0.1"
log = "0.4.17"
uuid = "1.4.1"

[dev-dependencies]
rstest = "0.18.2"
rstest_reuse = "0.6.0"
lazy_static = "^1.4.0"
toml = "0.7.2"

[dependencies.chrono]
workspace = true

[dependencies.sqlparser]
workspace = true

[dependencies.vegafusion-common]
path = "../vegafusion-common"
version = "1.6.9"
features = ["sqlparser"]

[dependencies.vegafusion-dataframe]
path = "../vegafusion-dataframe"
version = "1.6.9"

[dependencies.vegafusion-datafusion-udfs]
path = "../vegafusion-datafusion-udfs"
version = "1.6.9"
optional = true

[dependencies.arrow]
workspace = true
features = ["ipc"]

[dependencies.datafusion-common]
workspace = true

[dependencies.datafusion-expr]
workspace = true

[dependencies.datafusion-functions]
workspace = true

[dependencies.datafusion-functions-aggregate]
workspace = true

[dependencies.datafusion-functions-window]
workspace = true

[dependencies.datafusion]
workspace = true
optional = true

[dependencies.tempfile]
version = "3.3.0"
optional = true

[dependencies.reqwest]
workspace = true
default-features = false
features = ["rustls-tls"]
optional = true

[dependencies.reqwest-retry]
version = "0.3.0"
optional = true

[dependencies.reqwest-middleware]
version = "0.2.0"
optional = true

[dependencies.regex]
version = "^1.5.5"
optional = true

[dependencies.object_store]
workspace = true
optional = true
features = ["aws"]

[dependencies.url]
version = "2.3.1"
optional = true

[dependencies.pyo3]
workspace = true
optional = true

[dependencies.pyo3-arrow]
workspace = true
optional = true

[dev-dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[dev-dependencies.serde_json]
version = "1.0.91"
features = ["preserve_order"]

[dev-dependencies.vegafusion-datafusion-udfs]
path = "../vegafusion-datafusion-udfs"
version = "1.6.9"

[dev-dependencies.vegafusion-common]
path = "../vegafusion-common"
version = "1.6.9"
features = ["sqlparser", "json", "prettyprint"]

[dev-dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread"]

[dev-dependencies.serde]
version = "1.0.137"
features = ["derive"]
