[package]
name = "vegafusion-wasm"
license = "BSD-3-Clause"
version = "2.0.2"
edition = "2021"
description = "VegaFusion WASM package for embedding Vega charts in the browser with a connection to a VegaFusion Runtime"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
protobuf-src = ["vegafusion-core/protobuf-src"]

[dependencies]
wasm-bindgen-futures = "0.4.28"
serde-wasm-bindgen = "0.6"
js-sys = "0.3.55"
indexmap = "1.9.2"

# Override sqlparser to disable recursive-protection feature for WASM
[dependencies.sqlparser]
workspace = true

# Add datafusion-sql to control its features
[dependencies.datafusion-sql]
version = "48.0.0"
default-features = false
features = ["unicode_expressions", "unparser"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies.serde_json]
workspace = true

[dependencies.prost]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.vegafusion-common]
path = "../vegafusion-common"
features = ["json"]
version = "2.0.2"

[dependencies.vegafusion-core]
path = "../vegafusion-core"
version = "2.0.2"

[dependencies.vegafusion-runtime]
path = "../vegafusion-runtime"
version = "2.0.2"
default-features = false
features = ["http-wasm"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.wasm-bindgen]
version = "0.2.78"

# Ensure both getrandom versions have proper WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

# Force getrandom 0.3 to have wasm_js feature
[dependencies.getrandom]
workspace = true
features = ["wasm_js"]

[dependencies.chrono]
version = "0.4.31"
features = ["wasmbind"]

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

[dependencies.web-sys]
version = "0.3.55"
features = ["Document", "Element", "HtmlElement", "Node", "Window"]

[dependencies.async-trait]
workspace = true

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(wasm_bindgen_unstable_test_coverage)"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
