[package]
name = "rust-examples"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
vegafusion-common = { path = "../../vegafusion-common" }
vegafusion-core = { path = "../../vegafusion-core" }
vegafusion-runtime = { path = "../../vegafusion-runtime" }
datafusion = { workspace = true }
reqwest = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }