[bdist_wheel]
universal = 0

[metadata]
name = vegafusion-jupyter
description = Altair Jupyter Widget library that relies on VegaFusion for serverside calculations
version = 1.6.9
author = Jon Mease
author_email = jonmmease@gmail.com
url = https://vegafusion.io
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = [ LICENSE.txt ]

