[bdist_wheel]
universal=0

[metadata]
name = vegafusion
version = 0.0.3
description = Core tools for using VegaFusion from Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = vega, altair, vegafusion, arrow
license = AGPLv3
license_file = LICENSE.txt

python = "^3.7"
homepage = "https://vegafusion.io"
repository = "https://github.com/vegafusion/vegafusion"
documentation = "https://vegafusion.io"

classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    altair>=4.2.0
    pyarrow>=6
    pandas

[options.extras_require]
embed = vegafusion-python-embed
