[bdist_wheel]
universal = 0

[metadata]
name = vegafusion
description = Core tools for using VegaFusion from Python
version = 1.1.0-rc1
long_description = file: README.md
long_description_content_type = text/markdown
keywords = vega, altair, vegafusion, arrow
license = BSD-3-Clause
license_file = LICENSE.txt
python = "^3.7"
homepage = "https://vegafusion.io"
repository = "https://github.com/hex-inc/vegafusion"
documentation = "https://vegafusion.io"
classifiers = 
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	License :: OSI Approved :: BSD License
	Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires = 
	altair>=4.2.0
	pyarrow>=5
	pandas
	psutil

[options.extras_require]
embed = 
	vegafusion-python-embed==1.1.0-rc1
	vl-convert-python>=0.7.0

